--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/eva-icons": "5.0.0",
     "@nebular/theme": "5.0.0",
+    "@syncfusion/ej2-angular-gantt": "^18.4.47",
     "bootstrap": "4.3.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
